    - Changed normal beacons to have 3 module slots.
    - Changed normal beacons to have 1 distribution effectivity, instead of 1.5.
    - Moved trace gas ammonia into its own technology.
    - Moved ammonium vanadate solution to atmospheric ammonia technology.
    - Changed basic-basic wood growth to take 60s instead of 20s. Fuck you.

  Fixes:
    - Fixed the science pack item names captilisation.
    - (Mostly) Fixed the Factoriopedia being a mess. Never not name your recipes after their outputs.
    - Fixed empty reactor cells taking 0.5s to craft, and not 20s. Sucks to suck, huh?
    - Finally got rid of the plastic bar item that appears in the factoriopedia and item menus.
    - Re-ordered science to actually be in the correct order (normal > plastic > francium)
    - Fixed the ordering of certain subgroups, for real this time.
    - Fixed random things like explosives not being in the presumably correct category.
    - Made slugs actually work with 2.0, im not sure how well they now work so any balance or suggestions are greatly appreciated.
    - Changed byproduct handling to be unlockable from ezekiel processing, and not transition metal leeching.
    - Added the heavy lubricant recipe of solar cells to lubricant technology.
    - Fixed ezekiel ore leeching to actually give the correct amount of ore. This hurts you more then it hurts me, i assure you.

---------------------------------------------------------------------------------------------------
Version: 0.6.150
Date: 2025-01-25
  The they just HADDD to change scales Update:

  Fixes:
    - Fixed some icons being too small on belts.

---------------------------------------------------------------------------------------------------
Version: 0.6.149
Date: 2025-01-22
  The the road to good intentions is paved with bad ratios Update:

  Changes:
    - Changed all basic ores (iron, copper, nickel, zinc) to give 2-4 of their respective byproduct, and their chromic versions to give 0-4.